# auth2guard

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
auth2guard/: __init__.py  sentinel.py
tests/auth2guard/: test_package.py
