[tool.poetry]
name = "auth2guard"
version = "0.3.1"
description = "OAuth 2.0 scope validator"
authors = ["Marco Sievers de Almeida Ximit Gaia <im.ximit@gmail.com>"]
license = "Apache License 2.0"
readme = "README.md"
packages = [
    { include = "auth2guard"},
    { include = "auth2guard/**/*.py" },
]

[tool.poetry.dependencies]
python = "^3.10"
jwt = "^1.3.1"


[tool.poetry.group.dev.dependencies]
pytest = "^7.2.1"
mutatest = "^3.1.0"
pylint = "^2.15.10"
freezegun = "^1.2.2"
pytest-asyncio = "^0.20.3"
pre-commit = "^3.1.1"
pytest-cov = "^4.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
